chore: 更新.gitignore和ant-design相关配置
- 在.gitignore中添加pnmp-lock.yaml和重复的ant-design/pnpm-lock.yaml条目
- 更新ant-design/build.lowcode.js中的CDN链接至antd 5.22.7版本
- 修改ant-design/package.json中的lowcode脚本并升级antd依赖至5.24.4版本

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build
 dist
 site
 .tmp
+pnmp-lock.yaml
 es
 public/resources/meta.json
 packages/*/lib/
@@ -117,3 +118,6 @@ src/assets.container.json
 assets.json
 assets.container.json
 material-meta.json
+packages/ant-design/pnpm-lock.yaml
+packages/ant-design/pnpm-lock.yaml
+packages/ant-design/pnpm-lock.yaml
