--- a/packages/appthen-react/package.json
+++ b/packages/appthen-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@appthen/react",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "description": "Appthen Base UI KIT for React",
   "main": "dist/index.cjs2.js",
   "module": "dist/index.es2.js",
@@ -43,11 +43,10 @@
   },
   "dependencies": {
     "@alilc/lowcode-datasource-engine": "^1.1.4",
-    "history": "4.x",
-    "react-router-dom": "^6.22.3",
     "async-validator": "^4.2.5",
     "classnames": "^2.2.6",
     "dayjs": "^1.11.6",
+    "history": "4.x",
     "lodash": "^4.17.21",
     "mobx": "^4.8.0",
     "mobx-react": "^6.1.4",
@@ -59,7 +58,9 @@
     "@alib/build-scripts": "^0.1.3",
     "@alifd/build-plugin-lowcode": "^0.3.0",
     "@alifd/theme-2": "^0.4.0",
+    "@alilc/lowcode-react-renderer": "^1.3.4",
     "@alilc/lowcode-types": "^1.1.2",
+    "@alilc/lowcode-utils": "^1.3.4",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-json": "^4.0.2",
@@ -77,6 +78,7 @@
     "build-plugin-component": "^1.12.1",
     "build-plugin-component-multiple": "^1.0.0-beta.5",
     "camelize": "^1.0.0",
+    "moment": "^2.30.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-native": "^0.64.0",
@@ -84,11 +86,11 @@
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-visualizer": "^4.0.2",
+    "sass": "1.58.3",
     "style-loader": "^1.3.0",
     "tslib": "^2.6.2",
-    "sass": "1.58.3",
-    "vite": "^4.1.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "vite": "^4.1.0"
   },
   "peerDependencies": {
     "@tarojs/components": ">=3",
@@ -96,7 +98,8 @@
     "@tarojs/taro-h5": ">=3",
     "antd": "5.9.0",
     "react": ">=16.13.0",
-    "react-dom": ">=16.13.0"
+    "react-dom": ">=16.13.0",
+    "react-router-dom": "^6.0.0"
   },
   "acceptDependencies": {
     "webpack": "^4.46.x"
